# yule_log

./: Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/examples/: simple.rs
core/src/: builder.rs  datastream.rs  roundtrip_test.rs  tokenizer.rs
crates/core/: Cargo.toml
crates/core/examples/: derive_macros.rs  simple.rs  ulogcat.rs
crates/core/src/: builder.rs  datastream.rs  display.rs  encode.rs  errors.rs  field_helpers.rs  formats.rs  lib.rs  macro_utils.rs  message_buf.rs  model.rs  parser.rs
crates/core/tests/: roundtrip_test.rs
crates/macros/src/: lib.rs
integration_tests/: Cargo.toml
integration_tests/tests/: test_derive.rs  test_derive_negative.rs  test_sub_allow_list.rs
tests/: Cargo.toml
tests/fixtures/compile/: fail_ulogdata_enum.stderr  fail_ulogdata_generic.stderr  fail_ulogdata_unnamed.stderr  fail_ulogmessages_forward_other.stderr  fail_ulogmessages_generic.stderr  fail_ulogmessages_multi.stderr  fail_ulogmessages_struct.stderr
tests/tests/: test_compile.rs  test_derive.rs  test_derive_negative.rs  test_derive_nested.rs  test_sub_allow_list.rs
