[workspace]
resolver = "2"
members = [
    "core",
    "macros",
    "integration_tests"
]

[workspace.package]
version = "0.3.3"
edition = "2021"

[workspace.dependencies]
yule_log = { version = "=0.3.3", path = "core" }
yule_log_macros = { version = "=0.3.3", path = "macros" }

byteorder = "1.5"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }

# Used by yule_log_macros
proc-macro2 = { version = "1.0", default-features = false }
quote       = { version = "1.0", default-features = false }
syn         = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing"] }
darling     = "0.21"
heck        = "0.5"
