[workspace]
resolver = "3"
members = ["crates/*", "tests"]

[workspace.package]
version = "0.3.3"
edition = "2021"

[workspace.dependencies]
yule_log = { version = "=0.3.3", path = "crates/core" }
yule_log_macros = { version = "=0.3.3", path = "crates/macros" }

byteorder = "1.5"
ecow = "0.2"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"
nonmax = "0.5"
regex = "1.11"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }

# Used by yule_log_macros
proc-macro2 = { version = "1.0", default-features = false }
quote       = { version = "1.0", default-features = false }
syn         = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing"] }
darling     = "0.21"
heck        = "0.5"
