[package]
name = "yule_log"
authors = ["https://github.com/annoybot"]
description = "A streaming parser for PX4 ULOG files."
keywords = ["parser", "ulog", "px4"]
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/annoybot/yule_log"
version = "0.3.3"
edition = "2021"
publish = true

[dependencies]
yule_log_macros = { workspace = true, optional = true }

byteorder.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
regex.workspace = true
serde.workspace = true

[features]
default = []
macros = ["yule_log_macros"]

[dev-dependencies]
tempfile = "3.13"

[[example]]
name = "derive_macros"
required-features = ["macros"]

[package.metadata.docs.rs]
features = ["macros"]
